tests/ui/consts/issue-89088.stderr
error: constant of non-structural type `Cow<'_, str>` in a pattern
  --> $DIR/issue-89088.rs:16:9
   |
LL | const FOO: &A = &A::Field(Cow::Borrowed("foo"));
   | ------------- constant defined here
...
LL |         FOO => todo!(),
   |         ^^^ constant of non-structural type
   |
  --> $SRC_DIR/alloc/src/borrow.rs:LL:COL
   |
   = note: `Cow<'_, str>` is not usable in patterns
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
help: add a condition to the match arm checking for equality
   |
LL -         FOO => todo!(),
LL +         binding if binding == FOO => todo!(),
   |

error: aborting due to 1 previous error

